<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@color/gray_bg_color"
    >
    <include layout="@layout/activity_toolbar_base"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/v1"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ll_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingVertical="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        >
        <TextView
            android:id="@+id/country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coutry_code_str"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dimen_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="@dimen/font_16sp"
            />
        <EditText
            android:id="@+id/phone"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/country_tv"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:hint="@string/input_num_str"
            android:inputType="phone"
            style="@style/Loin_Regi_Edit_style"
            />
    </android.support.constraint.ConstraintLayout>
    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/v1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingVertical="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/input_pwd_str"
        android:textSize="@dimen/font_14sp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:gravity="center_vertical"
        android:textCursorDrawable="@drawable/shape_et_cursor_color"
        style="@style/Pwd_style"
        />
    <TextView
        android:id="@+id/forget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd_str"
        app:layout_constraintTop_toBottomOf="@id/pwd_edit"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:textColor="@color/blue_text"
        />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_40dp"
        android:text="@string/login_str"
        android:textColor="@color/white"
        android:background="@drawable/blue_bg_cornor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/dimen_64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/main_card_h"
        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_20dp"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_num"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textColor="@color/text_color"

            />
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tv"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/blue_text"
            app:layout_constraintLeft_toRightOf="@id/tv1"
            />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>