<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterCodeActivity"
    android:background="@color/gray_bg_color"
    >
    <include layout="@layout/activity_toolbar_base"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/v1"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ll_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingVertical="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        >
        <TextView
            android:id="@+id/country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coutry_code_str"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dimen_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="@dimen/font_16sp"
            />
        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/country_tv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:hint="@string/input_num_str"
            android:inputType="phone"
            android:maxLength="30"
            style="@style/Loin_Regi_Edit_style"
            />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/code_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/v1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingVertical="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        >
        <EditText
            android:id="@+id/input_code"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/get_code_tv"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:hint="@string/input_code_str"
            android:inputType="number"
            android:maxLength="6"
            style="@style/Loin_Regi_Edit_style"
            />
        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_code_str"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/get_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_code_str"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:textSize="@dimen/font_12sp"
            android:textColor="@color/blue_text"
            app:layout_constraintRight_toRightOf="parent"
            />
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/red_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/code_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_text"
        app:layout_constraintTop_toBottomOf="@id/red_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textSize="@dimen/font_12sp"
        android:text="@string/register_help_str"
        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/agree_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirm_btn"
        android:layout_marginBottom="@dimen/dimen_16dp"
        >
        <CheckBox
            android:id="@+id/check"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            style="@style/CustomCheckBoxTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasred_str"
            android:textColor="@color/text_color"
            app:layout_constraintLeft_toRightOf="@id/check"
            android:layout_marginLeft="@dimen/dimen_6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:textSize="@dimen/font_12sp"
            />
        <TextView
            android:id="@+id/agree_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_str"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/blue_text"
            app:layout_constraintLeft_toRightOf="@id/tv3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:textSize="@dimen/font_12sp"
            />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_40dp"
        android:text="@string/set_pwd_str"
        android:textColor="@color/white"
        android:background="@drawable/blue_bg_cornor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/dimen_64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/main_card_h"
        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_20dp"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_num"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textColor="@color/text_color"

            />
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/blue_text"
            app:layout_constraintLeft_toRightOf="@id/tv1"
            />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>